# chip8-cpp

./: .gitignore  CMakeLists.txt  README.md
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: chip8.hpp  engine.hpp  main.cpp  renderer.hpp  shader.hpp
src/resources/: shader.frag  shader.vert
